src/styles.css
/* You can add global styles to this file, and also import other style files */

.mat-slider.mat-slider-horizontal .mat-slider-wrapper {
  top: 18px;
}

.mat-slider.mat-slider-horizontal .mat-slider-track-wrapper {
  height: 12px;
  border-radius: 10px;
}

.mat-slider.mat-slider-horizontal .mat-slider-track-background, .mat-slider.mat-slider-horizontal .mat-slider-track-fill {
  height: 100%;
  background: #F3F3F3;
}

.mat-slider.mat-slider-horizontal .mat-slider-track-fill {
  background-color: #93d0CC;
}

.mat-accent .mat-slider-thumb {
  height: 25px;
  width: 25px;
  background-color: #80BAB1;
  border: 0px;
  bottom: -17px;
  right: -15px;
}

.mat-slider-min-value:not(.mat-slider-thumb-label-showing) .mat-slider-thumb {
  background-color: #80BAB1;
}
.mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
  background-color: #93d0CC !important;
  border-color: 1px solid #93d0CC;
  /* border-radius: 20px; */
}

.mat-ripple-element {
  background: #93d0CC !important;
  border-color: 1px solid #93d0CC;
}

.mat-checkbox .mat-checkbox-frame {
  border-color: 1px solid #93d0CC;
  background: white;
}

